--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,134 +1,94 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
   }
-body {
-    /* more on this crazy alphanumerical value in a minute! */
+  
+  body {
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
   }
-  /* apply styles to <header> */
-header {
+  
+  
+  /* HEADER / NAV BAR STYLES START */
+  
+  header {
     padding: 20px 35px;
     background-color: #39a6b2;
   }
-   /* Applies 20px to every side (top, right, bottom, left) */
- header {
-    padding: 20px;
-  }
- 
-  /* Applies 20px to the top and bottom, then 35px to the left and right */
-  header {
-    padding: 20px 35px;
-  }
- 
-  /* Applies 10px to the top, 15px to the right, 20px to the bottom, 25px to the left (in that specific clockwise order) */
-  header {
-    padding: 10px 15px 20px 25px;
-  }
- 
-  /* Explicitly list the side it should be applied to*/
-  header {
-    padding-top: 10px;
-    padding-right: 15px;
-    padding-bottom: 20px;
-    padding-left: 25px;
-  }
-
+  
   header h1 {
     font-weight: bold;
+    display: inline;
+    margin: 0;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
   }
   
-  header a {
-    color: #fce138;
-  }
   header a {
     text-decoration: none;
     color: #fce138;
   }
+  
   header nav {
     float: right;
     margin: 7px 0;
   }
+  
   header nav ul li {
     display: inline;
   }
+  
   header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
   }
-  header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
-    display: inline;
-  }
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
- 
-}
+  
+  /* HEADER / NAVBAR STYLES END */
+  
+  
+  
+  /* FOOTER STYLES START */
   footer {
     background: #fce138;
-    width: 100%;
     padding: 40px 35px;
+    width: 100%;
   }
+  
   footer h2 {
-    display: inline: inline-block
+    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
   }
-  footer a {
-    color: #024e76;
-  }
+  
   footer div {
     float: right;
     line-height: 1.5;
     text-align: right;
   }
+  
+  footer a {
+    color: #024e76;
+  }
+  /* END FOOTER STYLES */
+  
+  /* STYLE ALL SECTION TAGS */
   section {
     padding: 60px;
-    background-image: url("../images/hero-bg.jpg");
   }
   
-/* Hero Style Start */
-
-
-
-.hero {
-    background-image: assets\images\hero-bg.jpg;
-    height: 600px;
+  /* HERO STYLES START */
+  .hero {
+    background-image: url('../images/hero-bg.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
+    height: 600px;
   }
   
-.hero-form {
-    background-color: #fce138;
-    padding: 20px;
-    width: 500px;
-    color: #024e76;
-  }
- .hero-form {
-    ...
-    border-style: solid;
-    border-width: 3px;
-    border-color: #024e76;
-  }
- .hero-form {
-    ...
-    border: solid 3px #024e76;
-  }  
- .hero-form {
+  .hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
@@ -137,15 +97,12 @@ header {
     position: absolute;
     bottom: 120px;
     right: 140px;
-  } 
- .hero-form p {
-    margin: 5px 0 15px 0;
-  } 
+  }
+  
   .hero-form h3 {
     font-size: 24px;
     margin: 0;
   }
-  
   .hero-form p {
     margin: 5px 0 15px 0;
   }
@@ -157,111 +114,105 @@ header {
     font-size: 16px;
     color: #024e76;
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 15px; 
   }
+  
   .hero-form label {
     margin: 0 5px;
   }
+  
   .hero-form button {
     color: #fce138;
     background-color: #024e76;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
-  }
- /* Hero Style End */
-
- .intro {
-    text-align: center;
-  }
-
-  .intro h2 {
+  } 
+  /* HERO STYLES END */
+  
+  
+  /* SECTION TITLE STYLES START */
+  .section-title {
     font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
+    display: inline-block;
     padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
+    margin-bottom: 35px;
+    color: #024e76;
+  }
+  
+  .primary-border {
     border-color: #fce138;
   }
-  .intro h2 {
-    /* add this alongside your other declarations */
-    display: inline-block;
+  
+  .secondary-border {
+    border-color: #39a6b2;
   }
-
+  /* SECTION TITLE STYLES END */
+  
+  /* WHAT WE DO STYLES */
+  .intro {
+    text-align: center;
+  }
+  
   .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
+    margin: 0 auto;
     font-size: 20px;
   }
-  .intro p {
-    /* add this alongside your other declarations */
-    margin: 0 auto;
-  }
+  /* WHAT YOU DO STYLES END */
+  
+  
+  /* WHAT YOU DO STYLES START */
   .steps { 
     text-align: center;
     background: #fce138;
   }
-  .steps h2 {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #39a6b2;
-  }
-  .section-title {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
-  }
   
-.primary-border {
-    border-color: #fce138;
-  }
-  
-.secondary-border {
-    border-color: #39a6b2;
-  }
-.steps div {
+  .steps div {
     margin-bottom: 80px;
   }
   
-.steps img {
+  .steps img {
     width: 15%;
     margin: 10px 0;
   } 
   
-.steps h3 {
+  .steps h3 {
     color: #024e76;
     font-size: 46px;
     margin-top: 10px;
   }
   
-.steps p {
+  .steps span {
+    font-size: 38px;
+  }
+  
+  .steps p {
     color: #39a6b2;
     font-size: 23px;
   }
-.steps span {
-    font-size: 38px;
-  }
+  /* WHAT YOU DO STYLES END */
+  
+  /* MEET THE TRAINERS START */
   .trainers {
     text-align: center;
   }
+  
   .trainer {
     width: 900px;
     margin: 0 auto 30px auto;
     background: #024e76;
     color: #fce138;
+    overflow: auto;
   }
+  
   .trainer img {
     width: 35%;
     float: left;
   }
-  .trainer {overflow: auto;}
   
   .trainer-bio {
     padding: 35px;
@@ -269,13 +220,6 @@ header {
     width: 65%;
   }
   
-  .text-left {
-    text-align: left;
-  }
-  
-  .text-right {
-    text-align: right;
-  }
   .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -291,21 +235,23 @@ header {
     font-size: 17px;
     line-height: 1.3;
   }
-
+  /* TRAINER STYLES END */
+  
+  /* REACH OUT STYLES START */
   .contact {
     text-align: center;
     background: #024e76;
   }
-
+  
   .contact h2 {
     color: #fce138;
   }
-
+  
   .contact-info iframe {
     width: 400px;
-    height: 400px;
+  height: 400px;
   }
-
+  
   .contact-info div {
     width: 410px;
     display: inline-block;
@@ -314,6 +260,7 @@ header {
     margin: 30px 0 0 60px;
     color: white;
   }
+  
   .contact-info h3 {
     color: #fce138;
     font-size: 32px;
@@ -330,3 +277,14 @@ header {
     color: #fce138;
   }
   
+  
+  /* REACH OUT STYLES END */
+  
+  /* UTILITIES */
+  .text-left {
+    text-align: left;
+  }
+  
+  .text-right {
+    text-align: right;
+  }
