--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
   
   header h1 {
     font-weight: bold;
-    display: inline;
+    display: flex;
     margin: 0;
     font-size: 36px;
     color: #fce138;
@@ -31,7 +31,6 @@
   }
   
   header nav {
-    float: right;
     margin: 7px 0;
   }
   
